--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,16 @@
     ],
     "require": {
         "php": ">=8.0",
-        "laravel/framework": "^8.0|^9.0"
+        "laravel/framework": "^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
             "LaravelEnso\\Versioning\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "extra": {
@@ -34,5 +39,8 @@
             ],
             "aliases": {}
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5"
     }
 }
